--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <string name="app_name">AppX</string>
-    <string name="action_settings">Settings</string>
+    <string name="menu_recipes">Recipe</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_quit">Quit</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
