--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,12 +6,15 @@
 
     <!-- MENU -->
     <string name="menu_recipes">Recipe</string>
+    <string name="menu_search">Search</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_info">Info</string>
     <string name="menu_quit">Quit</string>
 
     <!-- TITLE -->
     <string name="title_recipes">Recipes</string>
     
     <string name="hello_world">Hello world!</string>
+    <string name="search_hint">Search all recipes</string>
 
 </resources>
