--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,8 @@
 
     <!-- MENU -->
     <string name="menu_recipes">Recipe</string>
+    <string name="menu_shopping_list">Shop</string>
+    <string name="menu_favorites">Favorites</string>
     <string name="menu_search">Search</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_info">Info</string>
@@ -13,8 +15,14 @@
 
     <!-- TITLE -->
     <string name="title_recipes">Recipes</string>
+    <string name="title_shopping_list">Shopping List</string>
+    <string name="title_favorites">Favorites</string>
+    <string name="title_recipe">Recipe</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_info">Info</string>
     
-    <string name="hello_world">Hello world!</string>
     <string name="search_hint">Search all recipes</string>
+    
+    <string name="welcome">Welcome to the new app.</string>
 
 </resources>
