--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- SYSTEM -->
     <string name="app_name">AppX</string>
+    <string name="preference_file_key">com.companyx.android.appx.PREFERENCE_FILE_KEY</string>
 
     <!-- MENU -->
     <string name="menu_recipes">Recipe</string>
@@ -23,6 +24,6 @@
     
     <string name="search_hint">Search all recipes</string>
     
-    <string name="welcome">Welcome to the new app.</string>
+    <string name="welcome">Welcome to the new insanely cool cooking app</string>
 
 </resources>
