--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,10 @@
     <string name="title_settings">Settings</string>
     <string name="title_info">Info</string>
     
+    <!-- RECIPE -->
+    <string name="recipe_button_favorite_description">Add/Remove Favorite</string>
+    <string name="recipe_button_shopping_list_description">Add/Remove Shopping List</string>
+    
     <string name="search_hint">Search all recipes</string>
     
     <string name="welcome">Welcome to the new insanely cool cooking app</string>
