Fixed dead navigation on Category, updated selection activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="select_recipe_hours">hrs</string>
     <string name="select_recipe_min">min</string>
     <string name="select_recipe_all_recipes">All Recipes</string>
+    <string name="select_recipe_chicken">Chicken</string>
     <string name="select_recipe_pork">Pork</string>
     <string name="select_recipe_meat">Meat</string>
     <string name="select_recipe_seafood">Seafood</string>
