--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="select_recipe_seafood">Seafood</string>
     <string name="select_recipe_produce">Produce</string>
     <string name="select_recipe_other">Other</string>
+    <string name="select_recipe_vegetarian">Vegetarian</string>
     
     <!-- RECIPE -->
     <string name="recipe_favorites_button_description">Add/Remove Favorite</string>
@@ -80,7 +81,7 @@
     
     <!-- PRODUCE -->
     <string name="apples">apples</string>
-    <string name="avocado">avocado</string>
+    <string name="avocados">avocados</string>
     <string name="bananas">bananas</string>
     <string name="cabbage">cabbage</string>
     <string name="carrots">carrots</string>
