--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- SYSTEM -->
-    <string name="app_name">AppX</string>
+    <string name="app_name">CookingXP</string>
     <string name="preference_file_key">com.companyx.android.appx.PREFERENCE_FILE_KEY</string>
     <string name="search_hint">Search all recipes</string>
 
