--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="recipe_shopping_list_removed">Removed</string>
     <string name="recipe_shopping_list_from_shopping_list">from Shopping List</string>
     
-    <string name="welcome">Welcome to the new cooking app</string>
+    <string name="welcome">Welcome to the new cooking game</string>
     
     <!-- MEAT -->
     <string name="bacon">Bacon</string>
@@ -96,6 +96,20 @@
     <string name="potatoes">potatoes</string>
     <string name="spinach">spinach</string>
     
-    <!-- OTHER -->
+    <!-- GAME BOXES -->
+    <string name="game_box0">Everyone Loves Bacon</string>
+    <string name="game_box1">Basic Steak</string>
+    <string name="game_box2">Patty</string>
+    <string name="game_box3">BLT</string>
+    <string name="game_box4">Bacon Wrapped Steak</string>
+    <string name="game_box5">Patty Melt</string>
+    <string name="game_box6">Meatloaf</string>
+    <string name="game_box7">Crockpot Roast</string>
+    <string name="game_box8">Meatball</string>
+    <string name="game_box9">Beef Stew</string>
+    <string name="game_box10">Chicken Fried Steak</string>
+    
+    <!-- GAME TREES -->
+    <string name="game_tree0">Tree 0</string>
 
 </resources>
