--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -97,17 +97,28 @@
     <string name="spinach">spinach</string>
     
     <!-- GAME BOXES -->
-    <string name="game_box0">Everyone Loves Bacon</string>
-    <string name="game_box1">Basic Steak</string>
-    <string name="game_box2">Patty</string>
-    <string name="game_box3">BLT</string>
-    <string name="game_box4">Bacon Wrapped Steak</string>
-    <string name="game_box5">Patty Melt</string>
-    <string name="game_box6">Meatloaf</string>
-    <string name="game_box7">Crockpot Roast</string>
-    <string name="game_box8">Meatball</string>
-    <string name="game_box9">Beef Stew</string>
-    <string name="game_box10">Chicken Fried Steak</string>
+    <string name="game_box_title0">Everyone Loves Bacon</string>
+    <string name="game_box_description0">Description 0.</string>
+    <string name="game_box_title1">Basic Steak</string>
+    <string name="game_box_description1">Description 1.</string>
+    <string name="game_box_title2">Patty</string>
+    <string name="game_box_description2">Description 2.</string>
+    <string name="game_box_title3">BLT</string>
+    <string name="game_box_description3">Description 3.</string>
+    <string name="game_box_title4">Bacon Wrapped Steak</string>
+    <string name="game_box_description4">Description 4.</string>
+    <string name="game_box_title5">Patty Melt</string>
+    <string name="game_box_description5">Description 5.</string>
+    <string name="game_box_title6">Meatloaf</string>
+    <string name="game_box_description6">Description 6.</string>
+    <string name="game_box_title7">Crockpot Roast</string>
+    <string name="game_box_description7">Description 7.</string>
+    <string name="game_box_title8">Meatball</string>
+    <string name="game_box_description8">Description 8.</string>
+    <string name="game_box_title9">Beef Stew</string>
+    <string name="game_box_description9">Description 9.</string>
+    <string name="game_box_title10">Chicken Fried Steak</string>
+    <string name="game_box_description10">Description 10.</string>
     
     <!-- GAME TREES -->
     <string name="game_tree0">Tree 0</string>
