--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -111,7 +111,7 @@
     <string name="game_box_title1">Basic Steak</string>
     <string name="game_box_description1">Steak Jitsu.</string>
     <string name="game_box_title2">Patty</string>
-    <string name="game_box_description2">A good burger isn't good without a Patty!</string>
+    <string name="game_box_description2">A good burger isn\'t good without a Patty!</string>
     <string name="game_box_title3">BLT</string>
     <string name="game_box_description3">The Classic Sandwich.</string>
     <string name="game_box_title4">Bacon Wrapped Steak</string>
@@ -119,13 +119,13 @@
     <string name="game_box_title5">Patty Melt</string>
     <string name="game_box_description5">Level 2 - Fight!</string>
     <string name="game_box_title6">Meatloaf</string>
-    <string name="game_box_description6">Not your mother's Meatloaf!</string>
+    <string name="game_box_description6">Not your mother\'s Meatloaf!</string>
     <string name="game_box_title7">Crockpot Roast</string>
     <string name="game_box_description7">Low and slow, that is the tempo!</string>
     <string name="game_box_title8">Meatball</string>
     <string name="game_box_description8">Perfect to eat, or use as ammo to start a food fight!</string>
     <string name="game_box_title9">Beef Stew</string>
-    <string name="game_box_description9">It didn't come out of a can this time!</string>
+    <string name="game_box_description9">It didn\'t come out of a can this time!</string>
     <string name="game_box_title10">Chicken Fried Steak</string>
     <string name="game_box_description10">There is no Secret Chicken level.</string>
     
