Updating to revert
Having to remove inconsistencies without fubaring my github client.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,15 +109,15 @@
     <string name="game_box_title0">Everyone Loves Bacon</string>
     <string name="game_box_description0">Who doesn\'t, right?!</string>
     <string name="game_box_title1">Basic Steak</string>
-    <string name="game_box_description1">Steak Jitsu.</string>
+    <string name="game_box_description1">Steak Jitsu</string>
     <string name="game_box_title2">Patty</string>
     <string name="game_box_description2">A good burger isn\'t good without a Patty!</string>
     <string name="game_box_title3">BLT</string>
-    <string name="game_box_description3">The Classic Sandwich.</string>
+    <string name="game_box_description3">The Classic Sandwich</string>
     <string name="game_box_title4">Bacon Wrapped Steak</string>
-    <string name="game_box_description4">Bacon + Meat = Delicious</string>
+    <string name="game_box_description4">Test</string>
     <string name="game_box_title5">Patty Melt</string>
-    <string name="game_box_description5">Level 2 - Fight!</string>
+    <string name="game_box_description5">Test</string>
     <string name="game_box_title6">Meatloaf</string>
     <string name="game_box_description6">Not your mother\'s Meatloaf!</string>
     <string name="game_box_title7">Crockpot Roast</string>
