--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,12 @@
     <string name="title_settings">Settings</string>
     <string name="title_info">Info</string>
     
+    <!-- MAIN -->
+    <string name="rank">Rank</string>
+    <string name="score">Score</string>
+    <string name="welcome">Under construction</string>
+    <string name="reset">Reset Game Data</string>
+    
     <!-- SELECT RECIPE -->
     <string name="select_recipe_favorites_alert_title">Favorite Recipes</string>
     <string name="select_recipe_favorites_empty">You don\'t have any favorite recipes saved yet!</string>
@@ -63,8 +69,6 @@
     <string name="recipe_info_hours">hrs</string>
     <string name="recipe_info_min">min</string>
     <string name="recipe_unlocked">unlocked</string>
-    
-    <string name="welcome">Welcome to the new cooking game</string>
     
     <!-- MEAT -->
     <string name="bacon">Bacon</string>
