--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="menu_favorites">Favorites</string>
     <string name="menu_search">Search</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_info">Info</string>
+    <string name="menu_adam">Adam\'s Lab</string>
     <string name="menu_quit">Quit</string>
 
     <!-- TITLE -->
