--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -113,15 +113,15 @@
     <string name="game_box_title0">Everyone Loves Bacon</string>
     <string name="game_box_description0">Who doesn\'t, right?!</string>
     <string name="game_box_title1">Basic Steak</string>
-    <string name="game_box_description1">Steak Jitsu.</string>
+    <string name="game_box_description1">Steak Jitsu\.</string>
     <string name="game_box_title2">Patty</string>
     <string name="game_box_description2">A good burger isn\'t good without a Patty!</string>
     <string name="game_box_title3">BLT</string>
-    <string name="game_box_description3">The Classic Sandwich.</string>
+    <string name="game_box_description3">The Classic Sandwich\.</string>
     <string name="game_box_title4">Bacon Wrapped Steak</string>
-    <string name="game_box_description4">Bacon + Meat = Delicious</string>
+    <string name="game_box_description4">Bacon \+ Meat \= Delicious</string>
     <string name="game_box_title5">Patty Melt</string>
-    <string name="game_box_description5">Level 2 - Fight!</string>
+    <string name="game_box_description5">Level 2 \- Fight!</string>
     <string name="game_box_title6">Meatloaf</string>
     <string name="game_box_description6">Not your mother\'s Meatloaf!</string>
     <string name="game_box_title7">Crockpot Roast</string>
@@ -131,7 +131,7 @@
     <string name="game_box_title9">Beef Stew</string>
     <string name="game_box_description9">It didn\'t come out of a can this time!</string>
     <string name="game_box_title10">Chicken Fried Steak</string>
-    <string name="game_box_description10">There is no Secret Chicken level.</string>
+    <string name="game_box_description10">There is no Secret Chicken level\.</string>
     
     <!-- GAME TREES -->
     <string name="game_tree0">The Way of Beef</string>
