--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="app_name">CookingXP</string>
     <string name="preference_file_key">com.companyx.android.appx.PREFERENCE_FILE_KEY</string>
     <string name="search_hint">Search all recipes</string>
+    <string name="facebook_app_id">283163598498410</string>
 
     <!-- MENU -->
     <string name="menu_recipes">Recipes</string>
