--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,7 +30,10 @@
     <string name="score">Score</string>
     <string name="welcome">Under construction</string>
     <string name="reset">Reset Game Data</string>
-    <string name="login_facebook">Login Using Facebook</string>
+    <string name="facebook_login">Login Using Facebook</string>
+    <string name="facebook_login_failed">Login failed</string>
+    <string name="facebook_share">Share to My Wall</string>
+    <string name="ok">OK!</string>
     
     <!-- SELECT RECIPE -->
     <string name="select_recipe_favorites_alert_title">Favorite Recipes</string>
