--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="welcome">Under construction</string>
     <string name="reset">Reset Game Data</string>
     <string name="facebook_login">Login Using Facebook</string>
+    <string name="facebook_share">Share to My Wall</string>
     
     <!-- SELECT RECIPE -->
     <string name="select_recipe_favorites_alert_title">Favorite Recipes</string>
