--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -175,7 +175,7 @@
     <string name="facebook_link">https://github.com/JLChin/CookingXP</string>
     <string name="facebook_picture">https://raw.github.com/JLChin/CookingXP/master/res/drawable-xhdpi/ic_launcher.png</string>
     <string name="facebook_s_score">\'s Score</string>
-    <string name="facebook_share_success">Shared to Facebook success!</string>
+    <string name="facebook_share_success">Successfully shared on Facebook!</string>
     <string name="facebook_no_active_session">No active Facebook session!</string>
     
     <!-- INFO -->
