groundwork for social media sharing, minimize lines of code

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -178,6 +178,12 @@
     <string name="facebook_share_success">Successfully shared on Facebook!</string>
     <string name="facebook_no_active_session">No active Facebook session!</string>
     
+    <!-- TWITTER -->
+    <string name="twitter_share">Share on Twitter</string>
+    
+    <!-- GOOGLE+ -->
+    <string name="google_plus_share">Share on Google+</string>
+    
     <!-- INFO -->
     <string name="info_credits"><b>Development</b>
         \nJames Chin
